@@ -1140,3 +1140,4 @@ The following functions accept any form a path. The INI and language INI functio
             Modified: StrMkUTF8() has now an additional parameter "size" and writes at most "size" bytes (including the terminating null byte) to SourceString
             Fixed: Wrong use of MAX_FILE_NAME_SIZE (which in fact is the max. string length of a file name)
             Fixed: Prevent ValidFileName() from missing MAX_FILE_NAME_SIZE and looping over whole strName with UTF-8 characters
+            Added: HDD_GetFileDir() which got lost when converting to TMS only code
